--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -1,4 +1,49 @@
-button{
-    background-color: reb;
-    text-color:blue;
+.body {
+ margin: 0px !important;
+}
+
+.navbar-background {
+    position: absolute;
+    top: 50px
+    height: 50px;
+    width: 100%;
+    background-color: #005B7D;
+}
+
+
+.center-alignment {
+       margin: auto;
+       width: 1000px;
+       position: relative;
+}
+
+.header h1 {
+    color: #7ecae0;
+    padding-top: 24px;
+    font-size: 45px;
+    margin-top: 0px;
+}
+
+.header ul {
+    padding-top: 10px;
+    margin: 0px;
+}
+
+.header ul li {
+  float: left;
+  list-style: none;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.clearfix {
+    clear: both;
+}
+.header ul li a {
+  text-decoration: none;
+}
+
+.center-alignment .content {
+    background-color: #56C6C7;
+    border-radius: 20px;
 }
